--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asiento_BLL.cs" />
     <Compile Include="Clasificacion_BLL.cs" />
     <Compile Include="Genero_BLL.cs" />
+    <Compile Include="Horario_BLL.cs" />
     <Compile Include="Pelicula_BLL.cs" />
+    <Compile Include="Sala_BLL.cs" />
+    <Compile Include="Sucursal_BLL.cs" />
     <Compile Include="Ticket_BLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
