--- a/Cine3capas.csproj
+++ b/Cine3capas.csproj
@@ -104,6 +104,7 @@
     <Content Include="Catalogos\GeneroPelicula\ListadoGeneroPelicula.aspx" />
     <Content Include="Catalogos\Pelicula\FormularioPeliculas.aspx" />
     <Content Include="Catalogos\Pelicula\ListadoPeliculas.aspx" />
+    <Content Include="Catalogos\ReporteVentas\ListadoReporteVenta.aspx" />
     <Content Include="Catalogos\Sala\FormularioSala.aspx" />
     <Content Include="Catalogos\Sala\ListadoSala.aspx" />
     <Content Include="Catalogos\Ticket\FormularioTicket.aspx" />
@@ -230,6 +231,13 @@
     <Compile Include="Catalogos\Pelicula\ListadoPeliculas.aspx.designer.cs">
       <DependentUpon>ListadoPeliculas.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Catalogos\ReporteVentas\ListadoReporteVenta.aspx.cs">
+      <DependentUpon>ListadoReporteVenta.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Catalogos\ReporteVentas\ListadoReporteVenta.aspx.designer.cs">
+      <DependentUpon>ListadoReporteVenta.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Catalogos\Sala\FormularioSala.aspx.cs">
       <DependentUpon>FormularioSala.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -309,6 +317,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Catalogos\Sucursal\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
