--- a/Cine3capas.csproj
+++ b/Cine3capas.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Catalogos\Detalles\ListadoDetalle.aspx" />
     <Content Include="Catalogos\GeneroPelicula\FormularioGenero.aspx" />
     <Content Include="Catalogos\GeneroPelicula\ListadoGeneroPelicula.aspx" />
     <Content Include="Catalogos\Pelicula\FormularioPeliculas.aspx" />
@@ -203,6 +204,13 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Catalogos\Detalles\ListadoDetalle.aspx.cs">
+      <DependentUpon>ListadoDetalle.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Catalogos\Detalles\ListadoDetalle.aspx.designer.cs">
+      <DependentUpon>ListadoDetalle.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Catalogos\GeneroPelicula\FormularioGenero.aspx.cs">
       <DependentUpon>FormularioGenero.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -317,7 +325,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Catalogos\Sucursal\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
